// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders data 1`] = `
<div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; z-index: 10000;"
    >
      <div
        style="transform: translate3d(0, 0, 0); z-index: 10002; width: 50%; background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);"
      >
        <div
          class="modalContainer"
        >
          <div
            class="modalHeader"
          >
            <img
              alt="__name__"
              height="250"
              src="__IMGURL__"
              width="80"
            />
            <div
              class="headerDetails"
            >
              <div>
                __name__
                 (abv
                10
                )
              </div>
              <div>
                __tagline__
              </div>
              <div
                class="ratingsWrapper"
              >
                <span
                  style="display: inline-block; direction: ltr;"
                >
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <div
                  class="counter"
                  data-testid="ratings-counter"
                >
                  (
                  4
                  )
                </div>
              </div>
            </div>
          </div>
          <div>
            __DESCRIPTION__
          </div>
          <button>
            More...
          </button>
        </div>
      </div>
      <div
        style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); z-index: 10001;"
      />
    </div>
  </div>
</div>
`;

exports[`renders errors 1`] = `
<div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; z-index: -1;"
    >
      <div
        style="transform: translate3d(0, 100px, 0); opacity: 0; z-index: -1; height: 0px; width: 0px; overflow: hidden;"
      >
        <p>
          Boom!
        </p>
      </div>
      <div
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`renders loading 1`] = `
<div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; z-index: -1;"
    >
      <div
        style="transform: translate3d(0, 100px, 0); opacity: 0; z-index: -1; height: 0px; width: 0px; overflow: hidden;"
      >
        <p>
          Getting some beer details.....
        </p>
      </div>
      <div
        style="display: none;"
      />
    </div>
  </div>
</div>
`;

exports[`shows more details 1`] = `
<div>
  <div>
    <div
      style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; display: flex; justify-content: center; align-items: center; z-index: 10000;"
    >
      <div
        style="transform: translate3d(0, 0, 0); z-index: 10002; width: 50%; background-color: rgb(255, 255, 255); border-radius: 5px; box-sizing: border-box; box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);"
      >
        <div
          class="modalContainer"
        >
          <div
            class="modalHeader"
          >
            <img
              alt="__name__"
              height="250"
              src="__IMGURL__"
              width="80"
            />
            <div
              class="headerDetails"
            >
              <div>
                __name__
                 (abv
                10
                )
              </div>
              <div>
                __tagline__
              </div>
              <div
                class="ratingsWrapper"
              >
                <span
                  style="display: inline-block; direction: ltr;"
                >
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                  <span
                    style="cursor: pointer; display: inline-block; position: relative;"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-star fa-w-18 empty"
                      data-icon="star"
                      data-prefix="fas"
                      role="img"
                      viewBox="0 0 576 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                        fill="currentColor"
                      />
                    </svg>
                    <span
                      style="display: inline-block; position: absolute; overflow: hidden; top: 0px; left: 0px; width: 100%;"
                    >
                      <svg
                        aria-hidden="true"
                        class="svg-inline--fa fa-star fa-w-18 full"
                        data-icon="star"
                        data-prefix="fas"
                        role="img"
                        viewBox="0 0 576 512"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
                          fill="currentColor"
                        />
                      </svg>
                    </span>
                  </span>
                </span>
                <div
                  class="counter"
                  data-testid="ratings-counter"
                >
                  (
                  4
                  )
                </div>
              </div>
            </div>
          </div>
          <div>
            __DESCRIPTION__
          </div>
          <button>
            More...
          </button>
        </div>
      </div>
      <div
        style="position: fixed; top: 0px; left: 0px; width: 100%; height: 100%; background-color: rgba(0, 0, 0, 0.7); z-index: 10001;"
      />
    </div>
  </div>
</div>
`;
